// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error 1`] = `
<div
  className="container"
>
  <StationHeader
    name="Waterloo"
    type="bus"
  />
  <ErrorMessage
    message="Unable to load data"
  />
</div>
`;

exports[`loaded 1`] = `
<div
  className="container"
>
  <StationHeader
    name="Waterloo"
    type="bus"
  />
  <ArrivalTimeTable
    arrivals={
      Array [
        Object {
          "lineName": "10",
          "stationName": "Waterloo",
          "timeToStation": 60,
        },
        Object {
          "lineName": "10",
          "stationName": "Waterloo",
          "timeToStation": 90,
        },
        Object {
          "lineName": "20",
          "stationName": "Waterloo",
          "timeToStation": 30,
        },
      ]
    }
  />
</div>
`;

exports[`loading 1`] = `
<div
  className="container"
>
  <StationHeader
    name="Waterloo"
    type="bus"
  />
  <Loading />
</div>
`;
